# openff-toolkit

./: Cargo.toml  Makefile  build.rs
.github/workflows/: check.yml  test.yml
python/: opt-records.py
src/: lib.rs  qcsubmit.rs  rdkit.rs  smirnoff.rs  topology.rs
src/qcportal/: models.rs
src/qcsubmit/: client.rs  results.rs
src/qcsubmit/client/: collection.rs  molecule.rs  procedure.rs  tests.rs
src/qcsubmit/results/: filters.rs  tests.rs
src/qcsubmit/snapshots/: openff_toolkit__qcsubmit__results__tests__load_filtered.snap
src/smirnoff/: bonds.rs
src/topology/: molecule.rs
testfiles/: molecules.json  opt_procedure.json  optimization_ids.txt  procedure.json  response.json
