[package]
name = "openff-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openmm = { version = "0.1.0", path = "../../../Projects/openmm" }
quick-xml = { version = "0.29.0", features = ["serialize"] }
rodeo = { version = "0.1.0", path = "../../../Projects/rodeo" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"