[package]
name = "openff-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version = "0.29.0", features = ["serialize"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
ligand = { path = "../ligand" }

openmm = { version = "0.1.0", path = "../../../Projects/openmm", optional = true }
rodeo = { version = "0.1.0", path = "../../../Projects/rodeo", optional = true }

[features]
openmm = ["dep:openmm"]
rodeo = ["dep:rodeo"]